library/src/libqregularexpression.h

typedef struct QRegularExpression QRegularExpression;
typedef struct QRegularExpressionMatch QRegularExpressionMatch;
typedef struct QRegularExpressionMatchIterator QRegularExpressionMatchIterator;
typedef QRegularExpression::MatchOptions MatchOptions;                           // C++ QFlags
typedef QRegularExpression::MatchType MatchType;                                 // C++ enum
typedef int MatchOptions;              // C ABI QFlags
typedef int MatchType;                 // C ABI enum
QTLIBC_API QRegularExpressionMatch* QRegularExpressionMatch_new();
QTLIBC_API QRegularExpressionMatch* QRegularExpressionMatch_new2(QRegularExpressionMatch* match);
QTLIBC_API void QRegularExpressionMatch_OperatorAssign(QRegularExpressionMatch* self, QRegularExpressionMatch* match);
QTLIBC_API void QRegularExpressionMatch_Swap(QRegularExpressionMatch* self, QRegularExpressionMatch* other);
QTLIBC_API QRegularExpression* QRegularExpressionMatch_RegularExpression(const QRegularExpressionMatch* self);
QTLIBC_API int QRegularExpressionMatch_MatchType(const QRegularExpressionMatch* self);
QTLIBC_API int QRegularExpressionMatch_MatchOptions(const QRegularExpressionMatch* self);
QTLIBC_API bool QRegularExpressionMatch_HasMatch(const QRegularExpressionMatch* self);
QTLIBC_API bool QRegularExpressionMatch_HasPartialMatch(const QRegularExpressionMatch* self);
QTLIBC_API bool QRegularExpressionMatch_IsValid(const QRegularExpressionMatch* self);
QTLIBC_API int QRegularExpressionMatch_LastCapturedIndex(const QRegularExpressionMatch* self);
QTLIBC_API bool QRegularExpressionMatch_HasCaptured(const QRegularExpressionMatch* self, libqt_string name);
QTLIBC_API bool QRegularExpressionMatch_HasCapturedWithNth(const QRegularExpressionMatch* self, int nth);
QTLIBC_API libqt_string QRegularExpressionMatch_Captured(const QRegularExpressionMatch* self);
QTLIBC_API libqt_string QRegularExpressionMatch_CapturedWithName(const QRegularExpressionMatch* self, libqt_string name);
QTLIBC_API libqt_list /* of libqt_string */ QRegularExpressionMatch_CapturedTexts(const QRegularExpressionMatch* self);
QTLIBC_API ptrdiff_t QRegularExpressionMatch_CapturedStart(const QRegularExpressionMatch* self);
QTLIBC_API ptrdiff_t QRegularExpressionMatch_CapturedLength(const QRegularExpressionMatch* self);
QTLIBC_API ptrdiff_t QRegularExpressionMatch_CapturedEnd(const QRegularExpressionMatch* self);
QTLIBC_API ptrdiff_t QRegularExpressionMatch_CapturedStartWithName(const QRegularExpressionMatch* self, libqt_string name);
QTLIBC_API ptrdiff_t QRegularExpressionMatch_CapturedLengthWithName(const QRegularExpressionMatch* self, libqt_string name);
QTLIBC_API ptrdiff_t QRegularExpressionMatch_CapturedEndWithName(const QRegularExpressionMatch* self, libqt_string name);
QTLIBC_API libqt_string QRegularExpressionMatch_Captured1(const QRegularExpressionMatch* self, int nth);
QTLIBC_API ptrdiff_t QRegularExpressionMatch_CapturedStart1(const QRegularExpressionMatch* self, int nth);
QTLIBC_API ptrdiff_t QRegularExpressionMatch_CapturedLength1(const QRegularExpressionMatch* self, int nth);
QTLIBC_API ptrdiff_t QRegularExpressionMatch_CapturedEnd1(const QRegularExpressionMatch* self, int nth);
QTLIBC_API void QRegularExpressionMatch_Delete(QRegularExpressionMatch* self);
QTLIBC_API QRegularExpressionMatchIterator* QRegularExpressionMatchIterator_new();
QTLIBC_API QRegularExpressionMatchIterator* QRegularExpressionMatchIterator_new2(QRegularExpressionMatchIterator* iterator);
QTLIBC_API void QRegularExpressionMatchIterator_OperatorAssign(QRegularExpressionMatchIterator* self, QRegularExpressionMatchIterator* iterator);
QTLIBC_API void QRegularExpressionMatchIterator_Swap(QRegularExpressionMatchIterator* self, QRegularExpressionMatchIterator* other);
QTLIBC_API bool QRegularExpressionMatchIterator_IsValid(const QRegularExpressionMatchIterator* self);
QTLIBC_API bool QRegularExpressionMatchIterator_HasNext(const QRegularExpressionMatchIterator* self);
QTLIBC_API QRegularExpressionMatch* QRegularExpressionMatchIterator_Next(QRegularExpressionMatchIterator* self);
QTLIBC_API QRegularExpressionMatch* QRegularExpressionMatchIterator_PeekNext(const QRegularExpressionMatchIterator* self);
QTLIBC_API QRegularExpression* QRegularExpressionMatchIterator_RegularExpression(const QRegularExpressionMatchIterator* self);
QTLIBC_API int QRegularExpressionMatchIterator_MatchType(const QRegularExpressionMatchIterator* self);
QTLIBC_API int QRegularExpressionMatchIterator_MatchOptions(const QRegularExpressionMatchIterator* self);
QTLIBC_API void QRegularExpressionMatchIterator_Delete(QRegularExpressionMatchIterator* self);