src/qt/libqregularexpression.bf

	
	public libqt_string Captured1(int32 nth)
	{
		return CQt.QRegularExpressionMatch_Captured1(this.nativePtr, nth);
	}
	
	public int32 CapturedStart1(int32 nth)
	{
		return CQt.QRegularExpressionMatch_CapturedStart1(this.nativePtr, nth);
	}
	
	public int32 CapturedLength1(int32 nth)
	{
		return CQt.QRegularExpressionMatch_CapturedLength1(this.nativePtr, nth);
	}
	
	public int32 CapturedEnd1(int32 nth)
	{
		return CQt.QRegularExpressionMatch_CapturedEnd1(this.nativePtr, nth);
	}
	
}
extension CQt
{
	[LinkName("QRegularExpressionMatch_new")]
	public static extern void* QRegularExpressionMatch_new();
	[LinkName("QRegularExpressionMatch_new2")]
	public static extern void* QRegularExpressionMatch_new2(void* match);
	[LinkName("QRegularExpressionMatch_OperatorAssign")]
	public static extern void QRegularExpressionMatch_OperatorAssign(void* c_this, void* match);
	[LinkName("QRegularExpressionMatch_Swap")]
	public static extern void QRegularExpressionMatch_Swap(void* c_this, void* other);
	[LinkName("QRegularExpressionMatch_RegularExpression")]
	public static extern void QRegularExpressionMatch_RegularExpression(void* c_this);
	[LinkName("QRegularExpressionMatch_MatchType")]
	public static extern int64 QRegularExpressionMatch_MatchType(void* c_this);
	[LinkName("QRegularExpressionMatch_MatchOptions")]
	public static extern int64 QRegularExpressionMatch_MatchOptions(void* c_this);
	[LinkName("QRegularExpressionMatch_HasMatch")]
	public static extern bool QRegularExpressionMatch_HasMatch(void* c_this);
	[LinkName("QRegularExpressionMatch_HasPartialMatch")]
	public static extern bool QRegularExpressionMatch_HasPartialMatch(void* c_this);
	[LinkName("QRegularExpressionMatch_IsValid")]
	public static extern bool QRegularExpressionMatch_IsValid(void* c_this);
	[LinkName("QRegularExpressionMatch_LastCapturedIndex")]
	public static extern int32 QRegularExpressionMatch_LastCapturedIndex(void* c_this);
	[LinkName("QRegularExpressionMatch_HasCaptured")]
	public static extern bool QRegularExpressionMatch_HasCaptured(void* c_this, libqt_string name);
	[LinkName("QRegularExpressionMatch_HasCapturedWithNth")]
	public static extern bool QRegularExpressionMatch_HasCapturedWithNth(void* c_this, int32 nth);
	[LinkName("QRegularExpressionMatch_Captured")]
	public static extern libqt_string QRegularExpressionMatch_Captured(void* c_this);
	[LinkName("QRegularExpressionMatch_CapturedWithName")]
	public static extern libqt_string QRegularExpressionMatch_CapturedWithName(void* c_this, libqt_string name);
	[LinkName("QRegularExpressionMatch_CapturedTexts")]
	public static extern libqt_string[] QRegularExpressionMatch_CapturedTexts(void* c_this);
	[LinkName("QRegularExpressionMatch_CapturedStart")]
	public static extern int32 QRegularExpressionMatch_CapturedStart(void* c_this);
	[LinkName("QRegularExpressionMatch_CapturedLength")]
	public static extern int32 QRegularExpressionMatch_CapturedLength(void* c_this);
	[LinkName("QRegularExpressionMatch_CapturedEnd")]
	public static extern int32 QRegularExpressionMatch_CapturedEnd(void* c_this);
	[LinkName("QRegularExpressionMatch_CapturedStartWithName")]
	public static extern int32 QRegularExpressionMatch_CapturedStartWithName(void* c_this, libqt_string name);
	[LinkName("QRegularExpressionMatch_CapturedLengthWithName")]
	public static extern int32 QRegularExpressionMatch_CapturedLengthWithName(void* c_this, libqt_string name);
	[LinkName("QRegularExpressionMatch_CapturedEndWithName")]
	public static extern int32 QRegularExpressionMatch_CapturedEndWithName(void* c_this, libqt_string name);
	[LinkName("QRegularExpressionMatch_Captured1")]
	public static extern libqt_string QRegularExpressionMatch_Captured1(void* c_this, int32 nth);
	[LinkName("QRegularExpressionMatch_CapturedStart1")]
	public static extern int32 QRegularExpressionMatch_CapturedStart1(void* c_this, int32 nth);
	[LinkName("QRegularExpressionMatch_CapturedLength1")]
	public static extern int32 QRegularExpressionMatch_CapturedLength1(void* c_this, int32 nth);
	[LinkName("QRegularExpressionMatch_CapturedEnd1")]
	public static extern int32 QRegularExpressionMatch_CapturedEnd1(void* c_this, int32 nth);
	/// Delete this object from C++ memory
	[LinkName("QRegularExpressionMatch_Delete")]
	public static extern void QRegularExpressionMatch_Delete(void* self);
}
public interface IQRegularExpressionMatchIterator
{
	void* NativePtr { get; }
}
public class QRegularExpressionMatchIterator : IQRegularExpressionMatchIterator
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QRegularExpressionMatchIterator_new();
	}
	
	public ~this()
	{
		CQt.QRegularExpressionMatchIterator_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(IQRegularExpressionMatchIterator iterator)
	{
		CQt.QRegularExpressionMatchIterator_OperatorAssign(this.nativePtr, (iterator == default) ? default : (void*)iterator.NativePtr);
	}
	
	public void Swap(IQRegularExpressionMatchIterator other)
	{
		CQt.QRegularExpressionMatchIterator_Swap(this.nativePtr, (other == default) ? default : (void*)other.NativePtr);
	}
	
	public bool IsValid()
	{
		return CQt.QRegularExpressionMatchIterator_IsValid(this.nativePtr);
	}
	
	public bool HasNext()
	{
		return CQt.QRegularExpressionMatchIterator_HasNext(this.nativePtr);
	}
	
	public void Next()
	{
		CQt.QRegularExpressionMatchIterator_Next(this.nativePtr);
	}
	
	public void PeekNext()
	{
		CQt.QRegularExpressionMatchIterator_PeekNext(this.nativePtr);
	}
	
	public void RegularExpression()
	{
		CQt.QRegularExpressionMatchIterator_RegularExpression(this.nativePtr);
	}
	
	public int64 MatchType()
	{
		return CQt.QRegularExpressionMatchIterator_MatchType(this.nativePtr);
	}
	
	public int64 MatchOptions()
	{
		return CQt.QRegularExpressionMatchIterator_MatchOptions(this.nativePtr);
	}
	
}
extension CQt
{
	[LinkName("QRegularExpressionMatchIterator_new")]
	public static extern void* QRegularExpressionMatchIterator_new();
	[LinkName("QRegularExpressionMatchIterator_new2")]
	public static extern void* QRegularExpressionMatchIterator_new2(void* iterator);
	[LinkName("QRegularExpressionMatchIterator_OperatorAssign")]
	public static extern void QRegularExpressionMatchIterator_OperatorAssign(void* c_this, void* iterator);
	[LinkName("QRegularExpressionMatchIterator_Swap")]
	public static extern void QRegularExpressionMatchIterator_Swap(void* c_this, void* other);
	[LinkName("QRegularExpressionMatchIterator_IsValid")]
	public static extern bool QRegularExpressionMatchIterator_IsValid(void* c_this);
	[LinkName("QRegularExpressionMatchIterator_HasNext")]
	public static extern bool QRegularExpressionMatchIterator_HasNext(void* c_this);
	[LinkName("QRegularExpressionMatchIterator_Next")]
	public static extern void QRegularExpressionMatchIterator_Next(void* c_this);
	[LinkName("QRegularExpressionMatchIterator_PeekNext")]
	public static extern void QRegularExpressionMatchIterator_PeekNext(void* c_this);
	[LinkName("QRegularExpressionMatchIterator_RegularExpression")]
	public static extern void QRegularExpressionMatchIterator_RegularExpression(void* c_this);
	[LinkName("QRegularExpressionMatchIterator_MatchType")]
	public static extern int64 QRegularExpressionMatchIterator_MatchType(void* c_this);
	[LinkName("QRegularExpressionMatchIterator_MatchOptions")]
	public static extern int64 QRegularExpressionMatchIterator_MatchOptions(void* c_this);
	/// Delete this object from C++ memory
	[LinkName("QRegularExpressionMatchIterator_Delete")]
	public static extern void QRegularExpressionMatchIterator_Delete(void* self);
}